syntax = "proto3";

package tc_serialize;

message Coordinates {
  double latitude = 1;
  double longitude = 2;
}

message Stop {
  uint32 id_stop = 1;
  string name = 2;
  Coordinates coords = 3;
}

message StopsList {
  repeated Stop all_stops = 1;
}

message DistanceBetweenStops {
  uint32 from_id = 1;
  uint32 to_id = 2;
  uint64 distance = 3;
}

message StopDistanceIndex {
  repeated DistanceBetweenStops all_stops_distance_index = 1;
}

message BusRoute {
  string bus_name = 1;
  int32 route_type = 2;
  repeated uint32 stop_ids = 3;
}

message AllRoutesList {
  repeated BusRoute routes_list = 1;
}

message BaseSettings {
  StopsList stops_list = 1;
  StopDistanceIndex stop_dist_index = 2;
  AllRoutesList all_routes_list = 3;
}