syntax = "proto3";

package tc_serialize;

message RoutingSettings {
  int64 bus_wait_time = 1;
  double bus_velocity = 2;
}

message StopOnRoutePB {
  uint64 stop_number = 1;
  uint32 stop_id = 2;
  string bus_name = 3;
  uint64 vertex_id = 4;
}

message TwoStopsLinkPB {
  string bus_name = 1;
  uint64 stop_from = 2;
  uint64 stop_to = 3;
  uint64 num_of_stops = 4;
  uint64 edge_id = 5;
}

message EdgePB {
  uint64 from = 1;
  uint64 to = 2;
  double weight = 3;
}

message EdgeVectorPB {
  repeated EdgePB edges = 1;
}

message IncListPB {
  repeated uint64 list = 1;
}

message IncidenceListPB {
  repeated IncListPB lists = 1;
}

message TCGraphRouter {
  repeated StopOnRoutePB tc_router_stops_ = 1;
  repeated TwoStopsLinkPB tc_router_links = 2;
  uint64 edge_count = 3;
  uint64 vertex_id_count = 4;
  EdgeVectorPB graph_edges = 5;
  IncidenceListPB graph_incidence_list = 6;
}

message RouteIntDataPB {
  double weight = 1;
  uint64 prev_edge = 2;
  bool prev_edge_empty = 3;
  bool data_empty = 4;
}

message VertexCountListPB {
  repeated RouteIntDataPB vertex_list = 1;
}

message RoutesInternalDataListsPB {
  repeated VertexCountListPB routes_list = 1;
}

message GraphRouterSettings {
  RoutingSettings routing_settings = 1;
  RoutesInternalDataListsPB router_routes_int_data = 2;
  TCGraphRouter tc_graph_router = 3;
}